breakup styles into styles, discord, animations, and other i forgot lmfao

--- a/src/views/admin/edit.ejs
+++ b/src/views/admin/edit.ejs
@@ -6,6 +6,7 @@
     <title>edit post</title>
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/admin.css">
+    <link rel="stylesheet" href="/css/animations.css">
     <script src="/js/starry-background.js"></script>
 </head>
 <body>
