--- a/src/views/skills.ejs
+++ b/src/views/skills.ejs
@@ -6,6 +6,7 @@
     <title><%= title %> | orangejuiceplz</title>
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/skills.css">
+    <link rel="stylesheet" href="/css/animations.css">
     <script src="/js/starry-background.js"></script>
 </head>
 <body>
