--- a/src/views/blog/blog.ejs
+++ b/src/views/blog/blog.ejs
@@ -6,6 +6,7 @@
     <title>Blog Posts</title>
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/blog.css">
+    <link rel="stylesheet" href="/css/animations.css">
     <script src="/js/starry-background.js"></script>
 </head>
 <body>
