--- a/src/views/discord.ejs
+++ b/src/views/discord.ejs
@@ -16,7 +16,7 @@
                     <h1>Discord Chat</h1>
                     <div id="chat-messages"></div>
                     <form id="chat-form">
-                        <input type="text" id="chat-input" placeholder="Type your message...">
+                        <input type="text" id="chat-input" placeholder="say hello!">
                         <button type="submit">Send</button>
                     </form>
                 </section>
