--- a/src/views/contact.ejs
+++ b/src/views/contact.ejs
@@ -6,6 +6,8 @@
     <title><%= title %> | orangejuiceplz</title>
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/animations.css">
+    <link rel="stylesheet" href="/css/discord.css">
+    <link rel="stylesheet" href="/css/contact.css">
     <script src="/js/starry-background.js"></script>
 </head>
 <body>
