--- a/src/views/stats.ejs
+++ b/src/views/stats.ejs
@@ -14,6 +14,20 @@
         <section class="github-stats">
             <h1 class="neon-text">GitHub Stats</h1>
             <p>heres all of my github stats, in the most unorganized way possible</p>
+            <div class="counter-container">
+                <div class="counter" data-target="500">
+                    <span class="counter-value">0</span>
+                    <span class="counter-label">Contributions</span>
+                </div>
+                <div class="counter" data-target="50">
+                    <span class="counter-value">0</span>
+                    <span class="counter-label">Repositories</span>
+                </div>
+                <div class="counter" data-target="1000">
+                    <span class="counter-value">0</span>
+                    <span class="counter-label">Commits</span>
+                </div>
+            </div>
             <div class="stats-grid">
                 <img src="http://github-profile-summary-cards.vercel.app/api/cards/stats?username=orangejuiceplz&theme=tokyonight" alt="GitHub Stats">
                 <img src="https://github-readme-streak-stats.herokuapp.com?user=orangejuiceplz&theme=tokyonight&hide_border=true&date_format=j%20M%5B%20Y%5D&card_width=480" alt="GitHub Streak">
