--- a/src/views/stats.ejs
+++ b/src/views/stats.ejs
@@ -17,15 +17,15 @@
             <div class="counter-container">
                 <div class="counter" data-target="500">
                     <span class="counter-value">0</span>
-                    <span class="counter-label">Contributions</span>
+                    <span class="counter-label">contrib</span>
                 </div>
                 <div class="counter" data-target="50">
                     <span class="counter-value">0</span>
-                    <span class="counter-label">Repositories</span>
+                    <span class="counter-label">repos</span>
                 </div>
                 <div class="counter" data-target="1000">
                     <span class="counter-value">0</span>
-                    <span class="counter-label">Commits</span>
+                    <span class="counter-label">commits</span>
                 </div>
             </div>
             <div class="stats-grid">
