--- a/src/partials/header.ejs
+++ b/src/partials/header.ejs
@@ -8,7 +8,8 @@
           <li><a href="/blog" class="nav-button">Blog</a></li>
           <li><a href="/stats" class="nav-button">GitHub Stats</a></li>
           <li><a href="/contact" class="nav-button">Contact</a></li>
-          <li><a href="/discord" class="nav-button">Discord</a></li>
+          <li><a href="/profile" class="nav-button">Profile</a></li>
+          <li><a href="/404" class="nav-button">Flashcards</a></li>
         </ul>
       </nav>
     </div>
