--- a/src/views/auth/login.ejs
+++ b/src/views/auth/login.ejs
@@ -28,10 +28,16 @@
                 <div class="auth-links">
                     <a href="/register">Don't have an account? Register</a>
                 </div>
+                <div class="google-signin">
+                    <a href="/auth/google" class="google-button">
+                        Sign in with Google
+                    </a>
+                </div>
             </div>
         </section>
     </main>
     <script src="/js/main.js"></script>
     <script src="/js/scroll-animations.js"></script>
+    <script src="/js/starry-background.js"></script>
 </body>
 </html>
