--- a/src/views/auth/register.ejs
+++ b/src/views/auth/register.ejs
@@ -32,10 +32,16 @@
                 <div class="auth-links">
                     <a href="/login">Already have an account? Login</a>
                 </div>
+                <div class="google-signin">
+                    <a href="/auth/google" class="google-button">
+                        Sign up with Google
+                    </a>
+                </div>
             </div>
         </section>
     </main>
     <script src="/js/main.js"></script>
     <script src="/js/scroll-animations.js"></script>
+    <script src="/js/starry-background.js"></script>
 </body>
 </html>
