--- a/src/partials/header.ejs
+++ b/src/partials/header.ejs
@@ -9,7 +9,7 @@
           <li><a href="/stats" class="nav-button">GitHub Stats</a></li>
           <li><a href="/contact" class="nav-button">Contact</a></li>
           <li><a href="/profile" class="nav-button">Profile</a></li>
-          <li><a href="/404" class="nav-button">Flashcards</a></li>
+          <li><a href="/flashcards" class="nav-button">Flashcards</a></li>
         </ul>
       </nav>
     </div>
